tests/testcases/net2/errors/BCE0139-2.boo
"""
BCE0139-2.boo(6,12): BCE0139: 'System.Collections.Generic.Dictionary[of TKey, TValue]' requires '2' arguments.
"""
import System.Collections.Generic

t = typeof(Dictionary[of *])

